# kimi-math-chat

./: .gitignore  Dockerfile  Gemfile  Procfile.dev  README.md
app/assets/tailwind/: application.css
app/controllers/: conversations_controller.rb  messages_controller.rb
app/helpers/: application_helper.rb
app/javascript/controllers/: autoscroll_controller.js  math_renderer_controller.js  model_selector_controller.js
app/jobs/: generate_response_job.rb  verify_math_job.rb
app/models/: conversation.rb  message.rb  verification.rb
app/services/: langfuse_tracing_service.rb  lean_verification_service.rb  llm_service.rb  math_detector_service.rb  math_verification_orchestrator.rb  sympy_verification_service.rb  wolfram_verification_service.rb
app/views/conversations/: index.html.erb
app/views/layouts/: application.html.erb
app/views/messages/: _message.html.erb
app/views/pwa/: manifest.json.erb
app/views/verifications/: _verification.html.erb
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
config/environments/: development.rb
config/initializers/: langfuse.rb
db/: schema.rb
db/migrate/: 20260304214744_create_conversations.rb  20260304214750_create_messages.rb  20260304214755_create_verifications.rb
lib/python/: requirements.txt  sympy_verify.py
wolfram_ext/: Cargo.toml  Rakefile  wolfram_ext.gemspec
wolfram_ext/ext/wolfram_ext/: extconf.rb
wolfram_ext/lib/: wolfram_ext.rb
wolfram_ext/src/: lib.rs
